--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <h6>Web Devlopement learning</h6>
 
 
-<p>My name is Tawfiq. I am a student.</br>
+<p><strong>My name is Tawfiq.</strong>I am a student.</br>
    I read in class 9. I will be a CSE Engineer.</br>
-   I want to be Google's CEO.
+   <strong>I want to be Google's CEO.</strong>
 </p>
 
 </body>
