--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
-<!DOCTYPE HTML>
-<html lang="en">
+<!DOCTYPE html>
+<html lng="en">
 <head>
-<meta charst="UTF-8">
-<title>This is my frist webpage</title>
+<meta charst="utf-8">
+<title>Html disine</title>
 </head>
-
 <body>
-<h1>I am practis my code</h1>
-
-<h1>Web Devlopement learning</h1>
-<h2>Web Devlopement learning</h2>
-<h3>Web Devlopement learning</h3>
-<h4>Web Devlopement learning</h4>
-<h5>Web Devlopement learning</h5>
-<h6>Web Devlopement learning</h6>
-
-
-<p><strong>My name is Tawfiq.</strong>I am a student.</br>
-   I read in class 9. I will be a CSE Engineer.</br>
-   <strong>I want to be Google's CEO.</strong>
-</p>
-
-</body>
-
-</html>
+	<h1>This is a pragrap</h1>
+	<h2>This is a pragrap</h2>
+	<h3>This is a pragrap</h3>
+	<h4>This is a pragrap</h4>
+	<h5>This is a pragrap</h5>
+	<h6>This is a pragrap</h6>
+	<p>I am a student. I learn web devlopment.</p>
+	
+	<p>Pic</p>
+	<a href="rocon.jpg">click here to see </a>
+	</br>
+	<p>Video</p>
+	<a href="HBT.mp4">Click here to watch </a>
+	</br>
+	<p>Google link</p>
+	<a href="https://www.google.com/">Click here</a>
+	
+	</br>
+	
+	<form>
+		<input type="Email" placeholder="Email">
+		</br>
+		<input type="Password" placeholder="Password">
+		</br>
+		<button type="Submit">login</button>
+	</from>
+    
+	</br>
+	
+	<label for="">Doctor </label>
+	<input type="checkbox">
+	</br>
+	<label for="">Engineer </label>
+	<input type="checkbox">
+	</br>
+	<label for="">scientist </label>
+	<input type="checkbox">
+	
+	</body>
+	</html>
